--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha --harmony"
   },
   "dependencies": {
-    "co-body": "^0.0.1",
+    "co-body": "0.0.1",
     "co-busboy": "^1.3.0",
     "co-views": "^0.2.0",
     "jquery": "^2.1.4",
@@ -25,6 +25,7 @@
     "react-router-component": "^0.25.1",
     "react-waypoint": "^1.0.1",
     "reactify": "^1.1.1",
+    "strong-data-uri": "^1.0.1",
     "swig": "^1.3.2"
   },
   "devDependencies": {
