--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "^3.9.3",
     "lokijs": "^1.3.4",
     "node-uuid": "^1.4.3",
+    "rc-progress": "^1.0.3",
     "react-async": "^2.1.0",
     "react-infinite-scroll": "^0.1.5",
     "react-router-component": "^0.25.1",
