--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "co-body": "0.0.1",
     "co-busboy": "^1.3.0",
     "co-views": "^0.2.0",
+    "datauri": "^0.7.1",
     "koa": "^0.6.0",
     "koa-body-parser": "^1.1.2",
     "koa-compress": "^1.0.6",
